# gamma-adjuster

./: .gitignore  CMakeLists.txt  README.md  callbacks.h  gamma-adjuster  gammaGlade.glade  main.c
